testdata/ns-npt-1/permit-3000-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-3000-ingress
  namespace: ns-npt-1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - ports:
      - port: 3000
      from:
        - podSelector:
            matchLabels:
              foo: bar
          namespaceSelector:
            matchExpressions:
              - key: foo
                operator: In
                values:
                  - bar
                  - baz
