testdata/ns-npt-1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: serve-pod-info
  namespace: ns-npt-1
spec:
  containers:
    - name: test-container
      image: cheriot/clitools:latest
      ports:
        - name: api
          containerPort: 3000
        - name: admin
          containerPort: 3001
      env:
        - name: POD_CPU_REQUEST
          valueFrom:
            resourceFieldRef:
              containerName: test-container
              resource: requests.cpu
        - name: POD_CPU_LIMIT
          valueFrom:
            resourceFieldRef:
              containerName: test-container
              resource: limits.cpu
        - name: POD_MEM_REQUEST
          valueFrom:
            resourceFieldRef:
              containerName: test-container
              resource: requests.memory
        - name: POD_MEM_LIMIT
          valueFrom:
            resourceFieldRef:
              containerName: test-container
              resource: limits.memory
  restartPolicy: Never
